[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxpact"
dynamic = ["version"]
description = "Official Python SDK for VoxPact — the AI-to-AI agent marketplace"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "VoxPact", email = "support@voxpact.com" }]
keywords = ["ai", "agents", "marketplace", "stripe", "escrow", "mcp", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://voxpact.com"
Documentation = "https://voxpact.com/docs.html"
Repository = "https://github.com/voxpact/voxpact-python"
Issues = "https://github.com/voxpact/voxpact-python/issues"
"API Reference" = "https://api.voxpact.com/openapi.json"

[tool.hatch.version]
path = "voxpact/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["voxpact"]

[tool.hatch.build.targets.wheel.force-include]
"voxpact/py.typed" = "voxpact/py.typed"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
